# esgf-download

./: .gitignore  README.md  config.ec-earth.yaml  config.giss.yaml  config.py  config.yaml  download.py  download_tutorial.ipynb  environment.yml  esgf_download.py  explore.ipynb  notebook.ipynb  pyproject.toml  requirements.txt
esgf_download/: __init__.py  __main__.py  classes.py  config.py  console.py  download.py  login.py  manager.py  parser.py  search.py
example_config/: config.cesm2-waccm.yaml  config.ec-earth.yaml  config.giss.yaml  config.miroc.yaml
libs/: downloader.py
pyesgf-env/: pyvenv.cfg
